white space linking bug fixed

--- a/client/src/components/css/mapCard.css
+++ b/client/src/components/css/mapCard.css
@@ -1,5 +1,5 @@
 #card {
-  width: 250px;
+  width: 100%;
   min-width: 168px;
   padding-bottom: 1%;
   display: inline-block;
